fix: [#4657] address review round 7 - naming convergence, stronger assertions, more tests
Seventh review pass:

- Catch-variable naming: use e everywhere it compiles; only the seven methods where
  e is already the Edge/int loop variable keep rnf (compile error otherwise), now
  with an inline note. SQLFunctionBellmanFord and SQLFunctionAstar's OLTP catch
  revert to e; the remaining rnf sites are genuinely forced.
- SQLFunctionShortestPath: spell out the iterator contract - if EdgeToVertexIterable
  is ever refactored to peek-then-advance, the two iterators would desync silently
  on a ghost; keep the next()-triggers-load coupling.
- Strengthen SQLFunctionShortestPathTest.edgeModeSkipsGhostEdge: assert the exact
  surviving route A-[e]->C-[e]->B (size 5, positions checked), not just isNotEmpty().
- Add PatternPredicateGhostEdgeTest.patternComprehensionSkipsGhostEdge covering
  PatternComprehensionExpression (single-hop and variable-length forms).
- Note explicitly that variableLengthTraversalSkipsGhostEdge drives the BFS/DFS
  traversers.

Verified: 3188 tests green across opencypher + sql/function/graph + graph.